# theta_py

./: .gitignore  LICENSE-MIT  README.md  RELEASING.md  hatch_build.py  justfile  lefthook.yml  pyproject.toml
.github/actions/setup-theta/: action.yml
.github/workflows/: ci.yml  release.yml  sync-theta.yml
src/theta_py/: __init__.py  _codegen.py  _version.py  errors.py  install.py  project.py  runner.py
src/theta_py/_generated/: __init__.py  constants.py  manifest.py  outcomes.py  project.py  verbs.py
tests/: test_project.py  test_project_contract.py  test_runner.py
tests/_generated/: test_verbs_smoke.py
tests/integration/: conftest.py  test_envelope_surface.py
