[project]
name = "theta-py"
version = "0.0.4"
description = "Python bindings for the theta CLI"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ivan", email = "ivan@tamarillo.ai" }]
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
dependencies = [
    "pydantic>=2.9",
]

[project.urls]
Homepage = "https://theta.tamarillo.ai/"
Documentation = "https://github.com/tamarillo-ai/theta_py"
Source = "https://github.com/tamarillo-ai/theta_py"
Issues = "https://github.com/tamarillo-ai/theta_py/issues"
Changelog = "https://github.com/tamarillo-ai/theta_py/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
artifacts = ["src/theta_py/_bin/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/theta_py"]
exclude = ["src/theta_py/_bin/**"]

# register the custom build hook (hatch_build.py) for the wheel target.
# the empty section is required — see
# https://github.com/pypa/hatch/discussions/1047.
[tool.hatch.build.targets.wheel.hooks.custom]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "ty>=0.0.1a1",
    "datamodel-code-generator[http]>=0.26",
    "ipython>=9.14.1",
    "ipykernel>=7.3.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [
    "src/theta_py/_generated",
    "tests/_generated",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TID", "PT"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not network'"
markers = [
    "integration: runs against a real theta binary",
    "network: hits the live Gemini API",
]

[tool.ty.src]
include = ["src"]
exclude = ["src/theta_py/_generated"]
